chore: configure CI, lock dependabot PRs, and sync project structure

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,4 +1,6 @@
 version: 2
+# Mantém o Dependabot configurado, mas sem abrir PRs automáticos.
+# (version updates ficam bloqueados com open-pull-requests-limit: 0)
 updates:
   - package-ecosystem: "pip"
     directory: "/"
