--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,12 @@
-# Botinho - Chat AI com Google Gemini Flash 2.0
-# Dependências mínimas necessárias
+fastapi>=0.110.0
+uvicorn>=0.27.0
+pydantic>=2.7.0
+pydantic-settings>=2.2.1
+google-genai>=1.0.0
 
-# Web Framework
-fastapi>=0.68.0
-uvicorn>=0.15.0
-
-# Google Gemini AI
-google-generativeai>=0.3.0
-
-# Dependências de desenvolvimento (opcional)
-# pytest>=6.0.0
-# black>=21.0.0
-# flake8>=3.9.0
-# python-dotenv>=0.19.0
+# Tooling used in local and CI validation
+pytest>=8.0.0
+pytest-asyncio>=0.24.0
+ruff>=0.5.0
+pip-audit>=2.7.0
+httpx>=0.27.0
